# opensourceleg

./: .all-contributorsrc  .coverage 2  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-config.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cross  Makefile  Moteus_Spec.md  README.md  SECURITY.md  config.alloy  cookiecutter-config-file.yml  dynamic_message.proto  dynamic_message_pb2.py  dynamic_message_pb2_grpc.py  fsm_grpc.py  fsm_grpc_new.py  grpc_client.py  hg_demo.py  index.html  messaging.py  mkdocs.yml  objects.inv  observable.pyi  parameters.txt  profiler.pyi  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test.py  (+6 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  deploy-docs.yml  main.yml  on-release-main.yml  release-please.yml
api/logging/: index.html
api/safety/: index.html
api/time/: index.html
benchmark/: bench.py  bench_object_logging.py  bench_rust.py  python_based_logger.py
benchmarks/: decorators.py  threads.py
contributing/: index.html
docker/: README.md
docs/: conf.py  contributing.md  contributing.rst  deployment.md  examples.rst  index.md  index.rst  installation.md  installation.rst  license.md  modules.md  requirements.txt  scripts.rst  security.md  tutorials.rst
docs/api/: control.rst  hardware.rst  logging.md  osl.rst  safety.md  time.md  tools.rst
docs/contributing/: code_of_conduct.rst  contributing_code.rst  reporting_bugs.rst
docs/examples/: basic_motion.md  basic_motion.rst  finite_state_machine.rst  fsm_walking_ankle_controller.md  fsm_walking_controller.md
docs/modules/: safety.md
docs/tutorials/: adding_a_joint.rst  adding_joints.rst  adding_loadcell.rst  compiled_control.rst  current_mode.rst  getting_started.rst  impedance_mode.rst  logger_tutorial.rst  osl_clock.rst  other_best_practices.md  position_mode.rst  reading_from_sensors.rst  voltage_mode.rst
examples/: FSM_walking_controller_MATLAB.py  OSL_EMG_Functions.py  basic_motion.py  fsm_walking_ankle_python_controller.py  fsm_walking_compiled_controller.py  fsm_walking_controller.py  fsm_walking_controller_python.py  fsm_walking_python_controller.py  osl_volitional_controller.py  osl_volitional_controller_pseudocode_JT.py
examples/basic_motion/: index.html
examples/fsm_walking_ankle_controller/: index.html
examples/fsm_walking_controller/: index.html
installation/: index.html
license/: index.html
logging_benchmark/: bench.py  bench_object_logging.py  bench_rust.py  util.py
modules/: index.html
modules/logging/: index.html
modules/safety/: index.html
modules/time/: index.html
opensourceleg/: __init__.py  actuators.py  ankle_encoder_map.npy  constants.py  control.py  demo.py  example.py  hardware.py  joints.py  knee_encoder_map.npy  loadcell.py  logger.py  opensourceleg.py  osl.log.1  osl.log.10  osl.log.2  osl.log.3  osl.log.4  osl.log.5  osl.log.6  osl.log.7  osl.log.8  osl.log.9  osl.py  rust.py  sensors.py  state_machine.py  statemachine.py  thermal.py  tui.py  units.py  utilities.py
opensourceleg/actuators/: README.md  Tmotor_Servo_CAN.py  __init__.py  base.py  decorators.py  dephy.py  dephy_legacy.py  moteus.py  tmotor  tmotor.py
opensourceleg/benchmarks/: benchmark_manager.py  current_step.py  decorators.py  efficiency.py  threads.py  torque_reading.py
opensourceleg/collections/: validators.py
opensourceleg/common/: __init__.py  offline.py
opensourceleg/control/: OSL_EMG_Functions.py  compiled.py  compiled_controller.py  fsm.py  state_machine.py  virtual_hard_stop.py
opensourceleg/controllers/: fsm.py
opensourceleg/generators/: README.md  __init__.py  base.py  expression_evaluator.py  expression_utils.py  signal_generators.py
opensourceleg/hardware/: AS5048B_encoder.py  actuators.py  actuators_Base.py  actuators_base.py  joints.py  sensors.py  thermal.py
opensourceleg/logging/: __init__.py  config.py  decorators.py  exceptions.py  logger.py  profiling.py  sentry_config.py
opensourceleg/math/: __init__.py  math.py
opensourceleg/messaging/: grpc.py
opensourceleg/profile/: __init__.py  __main__.py  tracer.py
opensourceleg/profiling/: .viztracerrc  __init__.py  tracer.py
opensourceleg/robots/: __init__.py  base.py  leg.py  osl.py  robots.py
opensourceleg/safety/: __init__.py  safety.py  sensors.py
opensourceleg/sensors/: README.md  adc.py  base.py  decorators.py  dephy.py  encoder.py  imu.py  loadcell.py  lordimu.py  torque_sensor.py
opensourceleg/strain_amp/: I2CManager.py  StrainAmp.py  strain_methods.py  strain_val.py
opensourceleg/testing/: LordIMU.py  StrainAmp.py  strain_methods.py  strain_val.py
opensourceleg/time/: __init__.py  profile.py  time.py
opensourceleg/timing/: __init__.py  profile.py
opensourceleg/tools/: logger.py  safety.py  units.py  utilities.py
opensourceleg/units/: __init__.py  units.py  units_manager.py
opensourceleg/utilities/: __init__.py  filters.py  profile.py  softrealtimeloop.py  units.py  utilities.py
scripts/: setup-cross-compilation.sh
search/: search_index.json
security/: index.html
src/: core.rs  lib.rs  logger.rs  main.rs  math.rs  profiler.rs  record.rs  rotator.rs
tests/: knee_encoder_map.npy  test_tui.py  test_units.py
tests/test_actuators/: __init__.py  test_actpackmode.py  test_actuators_base.py  test_dephy.py  test_dephyactpack.py  test_gains.py
tests/test_common/: __init__.py  test_offline.py
tests/test_control/: test_compiled_controller.py  test_control.py  test_state_machine.py
tests/test_controllers/: __init__.py  test_compiled.py
tests/test_example/: test_hello.py
tests/test_generators/: test_base.py  test_expression_evaluator.py  test_generators.py  test_signal_generators.py
tutorials/: adding_a_joint.py  adding_joints.py  adding_loadcell.py  current_mode.py  impedance_mode.py  logger_tutorial.py  position_mode.py  reading_from_sensors.py  voltage_mode.py
typing_hints/: opensourceleg_rs.pyi
(+323 files in other folders)
