[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[lib]
name = "profiler"
crate-type=["cdylib"]

[dependencies]
chrono = "0.4.41"
dashmap = { version = "6.1.0", features = ["serde"] }
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
pyo3 = { version = "0.25.1", features = ["extension-module"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
valuable = "0.1.1"
pythonize = "0.25.0"
zenoh = "1.4.0"
pyo3-asyncio = { version = "0.13", features = ["testing", "attributes", "async-std-runtime", "tokio-runtime"] }
tokio = { version = "1.46.1", features = ["full"] }
