# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opensourceleg"
version = "2.1.0"
description = "An open-source software library for numerical computation, data acquisition, and control of lower-limb robotic prostheses."
readme = "README.md"
authors = ["Open-source Leg <opensourceleg@gmail.com>"]
license = "GNU GPL v3.0"
repository = "https://github.com/neurobionics/opensourceleg"
homepage = "https://github.com/neurobionics/opensourceleg"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pyserial = "^3.5"
flexsea = "^8.0.1"
smbus2 = "^0.4.2"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.1"
black = {version = ">=22.3,<25.0", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = ">=0.991,<1.1"
mypy-extensions = "^0.4.3"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
pylint = ">=2.13.7,<4.0.0"
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
pyupgrade = "^2.29.1"
safety = "^2.2.0"
coverage = "^6.1.2"
coverage-badge = "^1.1.0"
pytest-html = "^4.1.1"
pytest-cov = ">=3,<5"
click = "8.1.3"
sphinx = "^7.2.6"
wheel = "^0.41.2"
sphinx-book-theme = "^1.0.1"
jinja2 = "^3.1.3"

[tool.bandit]
skips = ["B101"]

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true
exclude = ["tests"]

allow_redefinition = false
check_untyped_defs = false
disallow_any_generics = true
disallow_incomplete_defs = false
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "opensourceleg"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
